<resources>
    <string name="app_name">Klausurvorlage_mit_Activities</string>
    <string name="developed_by">Developed by Joshua Enthöfer, 16.02.2021</string>
    <string name="activity_1">Activity 1</string>
    <string name="activity_2">Activity 2</string>
    <string name="activity_3">Activity 3</string>
    <string name="activity_4">Activity 4</string>
    <string name="activity_5">Activity 5</string>
</resources>