<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tv_developed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/developed_by"/>
        <Button
            android:id="@+id/btn_activity1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_1"
            android:layout_below="@+id/tv_developed"/>
        <Button
            android:id="@+id/btn_activity2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_2"
            android:layout_below="@+id/btn_activity1"/>
        <Button
            android:id="@+id/btn_activity3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_3"
            android:layout_below="@+id/btn_activity2"/>
        <Button
            android:id="@+id/btn_activity4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_4"
            android:layout_below="@+id/btn_activity3"/>
        <Button
            android:id="@+id/btn_activity5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_5"
            android:layout_below="@+id/btn_activity4"/>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>